Fixed alignment of show/hide toggle buttons in diagnose mode view.  Fixed alignment of FPGA status elements in diagnose mode view.

--- a/web-app/src/app/components/status-row-header/status-row-header.component.css
+++ b/web-app/src/app/components/status-row-header/status-row-header.component.css
@@ -15,3 +15,9 @@
     color: #5bc0de;
     cursor: pointer;
 }
+
+@media(max-width: 575px) {
+    .title-row-header {
+        margin-bottom: 24px;
+    }
+}
